--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,7 +56,7 @@ jobs:
           strip target/release/hq
           export ARCHIVE_NAME=hq-${{ env.INPUT_TAG }}-linux-x64.tar.gz
           echo "ARCHIVE_NAME=$ARCHIVE_NAME" >> $GITHUB_ENV
-          tar -czvf $ARCHIVE_NAME -C target/release hq
+          tar -czvf $ARCHIVE_NAME -C target/release glib217
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
